--- a/PE/parse_graph_json.ipynb
+++ b/PE/parse_graph_json.ipynb
@@ -2,16 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "parse_graph_json.ipynb\n",
+    "\n",
+    "In this notebook we parse the json file created by the sim.print_state() PyLSE function.\n",
+    "\n",
+    "It contains a graph with all the elements and their connections. Using our knowledge of \n",
+    "the number of JJs that are present in each element we can get the total count for each of the components.\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,34 +66,16 @@
     "    \"S\" : 3,\n",
     "    \"C_INV\" : 3,\n",
     "    \"C\" : 5,\n",
-    "    'InGen' : 0,\n",
+    "    \"InGen\" : 0,\n",
+    "    \"_Connection\" : 0,\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'InGen': 1, 'S': 127, 'DRO': 128, 'JTL': 127}\n",
-      "1403\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n'write_control_memory_state.json'\\n\\nJJ counts\\n\\nJTL : 2\\nDRO : 6\\nS : 3\\n\\n127 Splitters\\n128 DROs\\n127 JTLs\\n\\n127 * 3 + 128 * 6 + 127 * 2 = 1403\\n\\n\""
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = 'write_control_memory_state.json'\n",
     "\n",
@@ -112,28 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'InGen': 3, 'S': 34301, 'DRO_C': 256, 'DRO': 33280, 'M': 512, 'JTL': 32512}\n",
-      "374519\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n'write_control_memory_state.json'\\n\\nJJ counts\\n\\nJTL : 2\\nDRO : 6\\nDRO_C : 13\\nM : 7\\nS : 3\\n\\n34301 Splitters\\n33280 DROs\\n256 DRO_Cs\\n512 Mergers\\n32512 JTLs\\n\\n'S': 34301, 'DRO_C': 256, 'DRO': 33280, 'M': 512, 'JTL': 32512\\n\\n3 * 34301 + 13 * 256 + 6 * 33280 + 7 * 512 + 3 * 32512\\n\\n34301 * 3 + 33280 * 6 + 32512 * 2 + 256 * 13 + 512 * 7 = \\n\\n\\n374,519\\n\""
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = 'weight_memory_state.json'\n",
     "\n",
@@ -180,28 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'InGen': 3, 'S': 797, 'DRO_C': 8, 'DRO': 16, 'M': 16, 'MUX': 256, 'JTL': 8}\n",
-      "6559\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n'write_control_memory_state.json'\\n\\nJJ counts\\n\\nJTL : 2\\nDRO : 6\\nDRO_C : 13\\nMUX : 15\\nM : 7\\nS : 3\\n\\n797 Splitters\\n16 DROs\\n8 DRO_Cs\\n16 Mergers\\n8 JTLs\\n256 MUX\\n\\n797 * 3 + 16 * 6 + 8 * 2 + 8 * 13 + 16 * 7 + 256 * 15 = \\n\\n\""
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = 'input_feature_memory.json'\n",
     "\n",
@@ -243,30 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'InGen': 1, 'S': 5439, 'DRO_C': 736, 'DRO': 288, 'JTL': 7232, 'DRO_SR': 1024, 'C_INV': 1824, 'C': 1536}\n",
-      "68541\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n'write_control_memory_state.json'\\n\\nJJ counts\\n\\nJTL : 2\\nDRO : 6\\nDRO_C : 13\\nDRO_SR : 13\\nMUX : 15\\nM : 7\\nS : 3\\nC_INV : 3\\nC : 5\\n\\n'S': 5439, 'DRO_C': 736, 'DRO': 288, 'JTL': 7232, 'DRO_SR': 1024, 'C_INV': 1824, 'C': 1536\\n\\n5439 * 3 + 736 * 13 + 288 * 6 + 7232 * 2 + 1024 * 13 + 1824 * 3 + 1536 * 5\\n\\n\\n\""
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "name = 'processing_element_array.json'\n",
+    "name = 'new_pe_array.json'\n",
     "\n",
     "d = load_json_file(name)\n",
     "counts = get_counts(d)\n",
@@ -298,34 +241,18 @@
     "\n",
     "5439 * 3 + 736 * 13 + 288 * 6 + 7232 * 2 + 1024 * 13 + 1824 * 3 + 1536 * 5\n",
     "\n",
+    "32 PE :\n",
+    "{'InGen': 530, 'S': 39054, 'JTL': 72960, 'C': 18336, 'C_INV': 18144, 'DRO_SR': 256, 'DRO': 256, 'DRO_C': 512, '_Connection': 1536}\n",
     "\n",
+    "Total JJs: 420,714\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'InGen': 515, 'S': 74300, 'M': 784, 'MUX': 256, 'JTL': 106119, 'DRO_C': 1000, 'DRO': 33712, 'C': 18112, 'DRO_SR': 1024, 'C_INV': 18368}\n",
-      "818714\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n'write_control_memory_state.json'\\n\\nJJ counts\\n\\nJTL : 2\\nDRO : 6\\nDRO_C : 13\\nDRO_SR : 13\\nMUX : 15\\nM : 7\\nS : 3\\nC_INV : 3\\nC : 5\\n\\n'S': 172482, 'M': 784, 'MUX': 256, 'JTL': 204301, 'DRO_C': 1000, 'DRO': 131894, 'C': 18112, 'DRO_SR': 1024, 'C_INV': 18368}\\n\\n3 * 172482 + 7 * 784 + 15 * 256 + 2 * 204301 + 13 * 1000 + 6 * 131894 + 5 * 18112 + 13 * 1024 + 3 * 18368\\n\\n\""
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = 'accelerator.json'\n",
     "\n",
@@ -360,37 +287,6 @@
     "'{'InGen': 515, 'S': 74300, 'M': 784, 'MUX': 256, 'JTL': 106119, 'DRO_C': 1000, 'DRO': 33712, 'C': 18112, 'DRO_SR': 1024, 'C_INV': 18368}\n",
     "\n",
     "3 * 172482 + 7 * 784 + 15 * 256 + 2 * 204301 + 13 * 1000 + 6 * 131894 + 5 * 18112 + 13 * 1024 + 3 * 18368\n",
-    "\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "write memory\n",
-    "{'InGen': 1, 'S': 127, 'DRO': 128, 'JTL': 127}\n",
-    "\n",
-    "weight memory\n",
-    "{'InGen': 3, 'S': 34301, 'DRO_C': 256, 'DRO': 33280, 'M': 512, 'JTL': 32512}\n",
-    "\n",
-    "input feature memory\n",
-    "{'InGen': 3, 'S': 797, 'DRO_C': 8, 'DRO': 16, 'M': 16, 'MUX': 256, 'JTL': 8}\n",
-    "\n",
-    "pe arr\n",
-    "{'InGen': 1, 'S': 5439, 'DRO_C': 736, 'DRO': 288, 'JTL': 7232, 'DRO_SR': 1024, 'C_INV': 1824, 'C': 1536}\n",
-    "\n",
-    "acc\n",
-    "'{'InGen': 515, 'S': 74300, 'M': 784, 'MUX': 256, 'JTL': 106119, 'DRO_C': 1000, 'DRO': 33712, 'C': 18112, 'DRO_SR': 1024, 'C_INV': 18368}\n",
-    "\n",
-    "other\n",
-    "'{'InGen': 515, 'S': 33636, 'M': 256, 'JTL': 66,320, 'C': 18112, 'C_INV': 18368}\n",
     "\n",
     "\"\"\""
    ]
